<resources>
    <!-- basic -->
    <string name="app_name">BEUNO</string>
    <string name="fps">0.0 FPS</string>
    <string name="empty"> </string>
    <string name="default_img_description">图片缺失</string>
    <string name="hint_num">数量</string>
    <string name="default_num">0</string>

    <!-- easy words -->
    <string name="delete">删除</string>
    <string name="collect">收藏</string>
    <string name="search">搜索</string>
    <string name="notice">通知</string>
    <string name="logo">Logo</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>

    <!-- action -->
    <string name="action_settings">设置</string>
    <string name="action_edit">编辑</string>
    <string name="action_finish">完成</string>
    <string name="action_test">Test</string>
    <string name="action_share">分享</string>
    <string name="action_clear">Clear</string>

    <!-- label -->
    <string name="label_test">Test</string>
    <string name="label_gl">GL</string>
    <string name="label_cpp">C++</string>
    <string name="label_sec">Second</string>
    <string name="label_cart">购物车</string>
    <string name="label_notice">消息通知</string>
    <string name="label_detail_goods">商品详情</string>

    <!-- template -->
    <string name="test">test</string>
    <string name="banner_indicator">banner_indicator</string>
    <string name="tmp_item_price">￥0.15</string>
    <string name="tmp_item_charge">满减</string>
    <string name="tmp_item_discount">五折</string>
    <string name="tmp_item_description">标准304不锈钢十字平头沉头自攻螺丝钉 平头自攻螺丝</string>
    <string name="tmp_item_slash">-----</string>
    <string name="tmp_brand_name">喜得利</string>
    <string name="tmp_brand_description">研发、生产及行销上都是世界领导者，提供给营造及建筑维修界的专业客户高附加价值、最顶级的产品。</string>
    <string name="tmp_goods_img_idx">1/6</string>
    <string name="tmp_goods_price">¥0.15</string>
    <string name="tmp_goods_least">1000只起购</string>
    <string name="tmp_goods_sold">已成交120000PCS</string>
    <string name="tmp_goods_name">标准304不锈钢十字平头沉头自攻螺丝钉 平头自攻螺丝钉M4 M5 M6木螺丝钉子 M5*40 (25个)</string>
    <string name="tmp_goods_version">品牌型号： 博世 GB854</string>
    <string name="tmp_goods_id">商品标识： MBR587</string>
    <string name="tmp_goods_material">商品材质： 201/304/316</string>
    <string name="tmp_goods_spec">M4*1000</string>

    <!-- entry -->
    <string name="entry_txt">初始化数据...</string>

    <!-- homepage -->
    <string name="homepage_bottom_navigation_1">首页</string>
    <string name="homepage_bottom_navigation_2">分类</string>
    <string name="homepage_bottom_navigation_3">发现</string>
    <string name="homepage_bottom_navigation_4">购物车</string>
    <string name="homepage_bottom_navigation_5">我的</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- title -->
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- search -->
    <string name="search_hint">请输入要查找的内容</string>

    <!-- cart -->
    <string name="cart_select_all">全选</string>
    <string name="cart_count_all">合计:</string>
    <string name="cart_cash">￥%.2f</string>
    <string name="cart_with_postage">(不含邮费)</string>
    <string name="cart_btn">结算(%d)</string>

    <!-- self -->
    <string name="self_orders">全部订单</string>
    <string name="self_pay">待付款</string>
    <string name="self_delivery">已发货</string>
    <string name="self_after_service">售后</string>
    <string name="self_collect">收藏</string>
    <string name="self_history">浏览记录</string>
    <string name="self_service">客服</string>

    <!-- brand -->
    <string name="brand_tab_1">综合</string>
    <string name="brand_tab_2">销量</string>
    <string name="brand_tab_3">新品</string>
    <string name="brand_tab_4">价格</string>

    <!-- detail goods -->
    <string name="goods_add_to_cart">加入购物车</string>
    <string name="goods_label_attr">产品属性</string>
    <string name="goods_label_spec">规格数量</string>
    <string name="goods_plus_label_spec">规格</string>
    <string name="goods_plus_label_num">数量</string>

    <!-- Settings -->
    <string name="settings_account">账户安全</string>
    <string name="settings_address">收货地址</string>
    <string name="settings_receipt">发票抬头</string>
    <string name="settings_cache">清理缓存</string>
    <string name="settings_version">Version 0.1</string>
    <string name="settings_log_out">退出登录</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_cart">CartActivity</string>

    <string name="title_activity_entry">EntryActivity</string>


</resources>
