<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_goods"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bar_bottom_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tab_goods_1"
            style="@style/Text.Large.Clickable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/brand_tab_1" />

        <TextView
            android:id="@+id/tab_goods_2"
            style="@style/Text.Large.Clickable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/brand_tab_2" />

        <TextView
            android:id="@+id/tab_goods_3"
            style="@style/Text.Large.Clickable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/brand_tab_3" />

        <TextView
            android:id="@+id/tab_goods_4"
            style="@style/Text.Large.Clickable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/brand_tab_4" />
    </LinearLayout>
</android.support.v7.widget.CardView>