<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/homepage_recommend_height"
    android:layout_margin="@dimen/margin_8"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/item_img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/homepage_recommend_img_height"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/default_img_description"
        android:src="@mipmap/list_product_img" />

    <TextView
        android:id="@+id/item_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:paddingStart="@dimen/margin_8"
        android:paddingEnd="@dimen/margin_8"
        android:layout_below="@id/item_img"
        android:textSize="@dimen/txt_description"
        android:layout_centerHorizontal="true"
        android:textColor="@color/auxiliary_on"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tmp_item_description" />

    <TextView
        android:id="@+id/item_price"
        android:textSize="@dimen/txt_main"
        android:textColor="@color/txt_main"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_below="@id/item_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_item_price"/>

    <TextView
        android:id="@+id/item_charge"
        android:textColor="@color/txt_main"
        android:layout_below="@id/item_txt"
        android:textSize="@dimen/txt_description"
        android:layout_toEndOf="@id/item_price"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/tmp_item_charge"/>

    <TextView
        android:id="@+id/item_discount"
        android:textColor="@color/yellow"
        android:layout_toEndOf="@id/item_charge"
        android:layout_below="@id/item_txt"
        android:textSize="@dimen/txt_description"
        android:layout_marginStart="@dimen/margin_4"
        android:background="@color/txt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_item_discount"/>
</RelativeLayout>