<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_bar_edit"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bar_bottom_height"
    android:layout_gravity="bottom"
    android:layout_marginTop="@dimen/margin_8"
    android:elevation="@dimen/elevation_light">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgGeneral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@string/cart_select_all">

        <Button
            android:id="@+id/cart_delete"
            style="@style/Button.Basic.Short.Red"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

        <Button
            android:id="@+id/cart_collect"
            style="@style/Button.Basic.Short"
            android:text="@string/collect"
            app:layout_constraintEnd_toStartOf="@id/cart_delete"
            app:layout_constraintHorizontal_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>