<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goods_part_b"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8"
    app:layout_constraintTop_toBottomOf="@id/goods_part_a">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/goods_price"
            style="@style/Text.Giant.Bold.BgGeneralDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmp_goods_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goods_least"
            style="@style/Text.Tiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/tmp_goods_least"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/goods_price" />

        <TextView
            android:id="@+id/goods_sold"
            style="@style/Text.Tiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_4"
            android:text="@string/tmp_goods_sold"
            app:layout_constraintBottom_toBottomOf="@id/goods_price"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/goods_name"
            style="@style/Text.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/tmp_goods_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_price"
            app:layout_constraintVertical_bias="0" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>