<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/holder_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/elevation_light"
    android:padding="@dimen/margin_16"
    app:layout_constraintTop_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgItem"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16">

        <com.beuno.beuno.widgets.custom.UnoItemSelf
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:img="@mipmap/mine_icon_collect"
            app:txt="@string/self_collect" />

        <View style="@style/Divider" />

        <com.beuno.beuno.widgets.custom.UnoItemSelf
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:img="@mipmap/mine_icon_record"
            app:txt="@string/self_history" />

        <View style="@style/Divider" />

        <com.beuno.beuno.widgets.custom.UnoItemSelf
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:img="@mipmap/mine_icon_service"
            app:txt="@string/self_service" />
    </LinearLayout>
</android.support.v7.widget.CardView>