<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goods_part_d"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintTop_toBottomOf="@id/goods_part_c">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16">

        <TextView
            android:id="@+id/goods_label_spec"
            style="@style/Text.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods_label_spec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/goods_spec_arrow"
            android:layout_width="@dimen/arrow_length_small"
            android:layout_height="@dimen/arrow_length_small"
            android:contentDescription="@string/default_img_description"
            android:src="@mipmap/arrow_r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goods_spec_and_num"
            style="@style/Text.Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:text="@string/tmp_goods_spec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/goods_spec_arrow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>