<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/general_large_view_height"
    android:layout_marginTop="@dimen/margin_8"
    android:background="@color/bgGeneral">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgItem"
            android:padding="@dimen/margin_8">

            <RadioButton
                android:id="@+id/item_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/item_img"
                android:layout_width="@dimen/cart_pic_length"
                android:layout_height="@dimen/cart_pic_length"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@color/bgGeneral"
                android:contentDescription="@string/default_img_description"
                android:src="@mipmap/list_product_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/item_radio"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/item_name"
                style="@style/Text.Main.AutoScroll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tmp_item_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/item_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_type"
                style="@style/Text.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test"
                app:layout_constraintStart_toEndOf="@id/item_img"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/item_price"
                style="@style/Text.Large.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_4"
                android:text="@string/tmp_item_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_img"
                app:layout_constraintTop_toBottomOf="@id/item_type" />

            <TextView
                android:id="@+id/item_count"
                style="@style/Text.Main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/item_price"
                app:layout_constraintTop_toBottomOf="@id/item_type" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>